W.I.P. 1.0.12
minor text fix
externalized tooltip strings

1.0.11
- Added an expandable tooltip to conditions with scaling that shows the strength of the effect at the various market sizes.
- Conditions that scale with market size now have a scaling cap:
   . Markets of size 2 and lower will always have the size 3 effect.
   . Markets of size 7 and higher will always have the size 6 effect.
- Added the vanilla condition images used by the mod to the files in case they get removed in the future.
- Unique planets and conditions can no longer spawn on the Planet Killer and Planetary Shield planets.
- Unique planets now have the proper TypeId.
- Minor text rewording.
- Added a new easter egg name.

1.0.10
- Added MagicLib dependency.
- Loading settings is now handled by MagicLib making the mod more stable with it in the future.

1.0.9
- Fixed some text inconsistencies.
- Tweaked some of the easter egg names.

1.0.8
- Added proper Slipsurge support to US stars.
- Windswept world can no longer spawns with no atmosphere (it couldn't happen anyway but just to be sure it's properly dealt with now).
- Reverted Artificial worlds being able to spawn in Hypershunt systems without ruins (it didn't make sense).
- Optimized some internal code.


1.0.7
- Fixed US_star_browndwarf spawning too frequently and having some incorrect stats.

1.0.6
- Rewrote most condition effects to be more in line with vanilla.
- Increased Underground Network scaling (was -3/4/5/6, now -6/8/10/12).
- Fixed Old Space Accelerator not properly scaling with market size (was +50/49/48/47, now +50/40/30/20).
- Psychoactive Fungus now only provides its drug production buff on planets with free port.
- Fixed Crashed Terraforming Drone showing an additional hazard reduction as its effect.

1.0.5
- Fixed an issue present in the original mod which caused Archipelago worlds to not be able to build aquaculture.

1.0.4
- Reduced the defense debuff from Military Virus to -50% (was -75%).