@@ -1,7 +1,7 @@
 name,id,planetary,decivRemove,script,desc,icon,order
-Magnetic Crust,US_magnetic,TRUE,,data.scripts.campaign.econ.US_magnetic,"$market's crust is rich in magnesite with a dense iron core, resulting in an exceptionally strong magnetic field. While shielding the surface from harmful radiation, it hinders colonization efforts by necessitating heavy protection for all electronic components. This intense magnetism, though challenging for settlers, provides a significant advantage to defenders during an invasion, as radio communications are naturally scrambled, unlike hardened land-lines.",graphics/icons/markets/US_magnetic.png,10
-Chaotic Structures,US_artificial,TRUE,,data.scripts.campaign.econ.US_artificial,"$market is blanketed by an Escherian maze of abandoned buildings, incomplete tunnels, sporadic roads, and assorted structures. Counterintuitively, this architectural chaos doesn't support the establishment or growth of colonies, lacking a coherent city plan. However, the landscape offers exceptional defensibility against invaders without a precise 3D scan, as the myriad paths mostly lead to nowhere through both open and hidden passages.",graphics/icons/markets/US_artificial.png,10
-Perpetual Dust Storm,US_storm,TRUE,,data.scripts.campaign.econ.US_storm,"$market is shrouded in a perpetual dust storm, intensifying material wear and compelling settlements to exist underground. The challenging landing conditions dampen commerce, but they equally disadvantage invaders, placing them at odds against well-entrenched defenses hidden in the dust.",graphics/icons/markets/dust_storm.png,10
+Magnetic Crust,US_magnetic,TRUE,,data.scripts.campaign.econ.US_magnetic,"$market's crust is rich in magnesite with a dense iron core, resulting in an exceptionally strong magnetic field. While shielding the surface from harmful radiation, it hinders colonization efforts by necessitating heavy protection for all electronic components. This intense magnetism, though challenging for settlers, provides a significant advantage to defenders during an invasion, as radio communications are naturally scrambled, unlike hardened land-lines.",graphics/icons/markets/US_magnetic.png,5
+Chaotic Structures,US_artificial,TRUE,,data.scripts.campaign.econ.US_artificial,"$market is blanketed by an Escherian maze of abandoned buildings, incomplete tunnels, sporadic roads, and assorted structures. Counterintuitively, this architectural chaos doesn't support the establishment or growth of colonies, lacking a coherent city plan. However, the landscape offers exceptional defensibility against invaders without a precise 3D scan, as the myriad paths mostly lead to nowhere through both open and hidden passages.",graphics/icons/markets/US_artificial.png,5
+Perpetual Dust Storm,US_storm,TRUE,,data.scripts.campaign.econ.US_storm,"$market is shrouded in a perpetual dust storm, intensifying material wear and compelling settlements to exist underground. The challenging landing conditions dampen commerce, but they equally disadvantage invaders, placing them at odds against well-entrenched defenses hidden in the dust.",graphics/icons/markets/dust_storm.png,5
 
 Military Virus,US_virus,TRUE,,data.scripts.campaign.econ.US_virus,"$market would be a desirable locale if not for a lingering military virus deployed in some long-forgotten conflict. While native wildlife remains unaffected, human inhabitants must take extreme precautions to survive. The virus lies dormant in various materials, making entrenched defenses impossible, as any damage to such structures poses a major infection risk. This constant threat deters population growth, resulting in a significantly reduced immigration rate. However, it creates an ideal location for constructing a bio-weapon production facility.",graphics/icons/markets/xenoplague.png,10
 Parasitic Spores,US_mind,TRUE,,data.scripts.campaign.econ.US_mind,"$market seems to be home to a very peculiar plant, one whose spores can influence mammalian cognitive processes. Affected individuals present a heightened sense of empathy, as well as a flourishing libido. Sadly, the spores also affect the motor-control centers of the brain, shortening the affected subject's attention span and reducing their ability to complete precise or complex tasks.",graphics/icons/markets/US_mind.png,10
