@@ -89,10 +89,16 @@ public class US_utils {
         return Math.min(Math.max(size, 3), 6);
     }
 
-    public static void addScalingTable(MarketAPI market, TooltipMakerAPI tooltip, boolean expanded, String effect3, String effect4, String effect5, String effect6) {
+    public static void addScalingTable(MarketAPI market, TooltipMakerAPI tooltip, boolean expanded, int type, String effect3, String effect4, String effect5, String effect6) {
         if (!expanded) {
             tooltip.addPara(txt("tooltip_hint"), Misc.getGrayColor(), 10f);
         } else {
+            float effectWidth = 110;
+
+            if (type == 2) {
+                effectWidth = 145;
+            }
+
             Color base = market.getPlanetEntity().getSpec().getIconColor();
             Color dark = base.darker().darker().darker().darker();
             Color bright = base.brighter().brighter().brighter().brighter();
@@ -107,7 +113,7 @@ public class US_utils {
 
             tooltip.addSectionHeading(txt("tooltip_header"), base, dark, Alignment.MID, 10f);
 
-            tooltip.beginTable(base, dark, bright, 20f, true, true, new Object[]{txt("tooltip_size"), 100f, txt("tooltip_scale"), 130f});
+            tooltip.beginTable(base, dark, bright, 20f, true, true, new Object[]{txt("tooltip_size"), 100f, txt("tooltip_scale_" + type), effectWidth});
 
             tooltip.addRow(Alignment.MID, Misc.getTextColor(), "3", Alignment.MID, Misc.getHighlightColor(), effect3);
             tooltip.addRow(Alignment.MID, Misc.getTextColor(), "4", Alignment.MID, Misc.getHighlightColor(), effect4);
